--- a/src/styles/StreamsGallery/StreamsGallery.scss
+++ b/src/styles/StreamsGallery/StreamsGallery.scss
@@ -11,10 +11,10 @@
 }
 
 .streams {	
-	display : flex;
-	flex-flow : row wrap;
-	justify-content : flex-start;
-	align-content : flex-start;
+	display : grid;
+	grid-template-columns : 1fr;
+	justify-items : center;
+	padding : 3vh;
 }
 
 /*.featured {
@@ -29,3 +29,30 @@
 .show {
 	display : block;
 }*/
+
+@media (min-width : 768px) {
+	
+	.streams {
+		grid-template-columns : 1fr 1fr;
+		grid-gap : 3vh;
+	}
+
+}
+
+@media (min-width : 1000px) {
+	
+	.streams {
+		grid-template-columns : 1fr 1fr 1fr;
+		grid-gap : 3vh;
+	}
+
+}
+
+@media (min-width : 1300px) {
+	
+	.streams {
+		grid-template-columns : 1fr 1fr 1fr 1fr;
+		grid-gap : 3vh;
+	}
+
+}
