--- a/src/styles/StreamCard.scss
+++ b/src/styles/StreamCard.scss
@@ -1,16 +1,22 @@
-.online-card {
-	display: flex;
-	flex-flow : column wrap;
-	text-align : center;
-	width : 90%;
+.online-card--outer {
+	display : flex;
+	align-items : center;
+	height : 100%;
 	background-color : #fff;
-	color : black;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	border-radius : 2px;
 	transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.online-card:hover {
+.online-card--inner {
+	display: flex;
+	flex-flow : column wrap;
+	text-align : center;
+	background-color : #fff;
+	color : black;
+}
+
+.online-card--outer:hover, .offline-card:hover {
   	box-shadow: 0 5px 8px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
@@ -29,10 +35,21 @@
 
 .online-card--img {
 	display : inline-block;
-	width : 95%;
+	width : 90%;
 	max-width : 320px;
 	height : 180px;
-	border : solid 2px black;
+	border : solid 1px black;
+}
+
+.online-card--game-div, .status--link, .online-card--viewers {
+	margin : 1vh 10px;
+}
+
+.offline-card {
+	@extend .online-card--inner;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	border-radius : 2px;
+	transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .logo-anchor {
@@ -46,13 +63,5 @@
 	margin : 1vh auto;
 	height : 110px;
 	width: 110px;
-	border : black 2px solid;
-}
-
-@media (min-width: 768px){
-
-	.online-card {
-    	width: 100%;
-	}
-
+	border : black 1px solid;
 }
