--- a/src/styles/StreamCard.scss
+++ b/src/styles/StreamCard.scss
@@ -1,5 +1,6 @@
 .online-card--outer {
 	display : flex;
+	justify-content : center;
 	align-items : center;
 	height : 100%;
 	background-color : #fff;
@@ -25,7 +26,7 @@
 	margin : 0 auto -1.5vh;
 }
 
-.online-card--img-anchor {
+.online-card--img-link {
 	display : inline-block;
 	width : 95%;
 	max-width : 320px;
@@ -52,13 +53,17 @@
 	transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.logo-anchor {
+.offline-card--status {
+	margin : 1vh 5px;
+}
+
+.offline-card--logo-anchor {
 	display : inline;
 	width: 110px;
 	margin : 0 auto;	
 }
 
-.logo {
+.offline-card--logo {
 	display : inline;
 	margin : 1vh auto;
 	height : 110px;
