--- a/src/styles/StreamCard.scss
+++ b/src/styles/StreamCard.scss
@@ -1,6 +1,5 @@
-.online-card--outer, .offline-card--outer {
+.online-card--outer {
 	display : flex;
-	flex-flow : column wrap;
 	justify-content : center;
 	align-items : center;
 	height : 100%;
@@ -10,7 +9,7 @@
 	transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.online-card--inner, .offline-card--inner {
+.online-card--inner {
 	display: flex;
 	flex-flow : column wrap;
 	text-align : center;
@@ -18,13 +17,8 @@
 	color : black;
 }
 
-.online-card--outer:hover, .offline-card--outer:hover {
+.online-card--outer:hover, .offline-card:hover {
   	box-shadow: 0 5px 8px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-
-.online-card--close, .offline-card--close {
-	align-self : flex-end;
-	padding : 6px 10px;
 }
 
 .online-card--status {
@@ -50,6 +44,13 @@
 
 .online-card--game-div, .status--link, .online-card--viewers {
 	margin : 1vh 10px;
+}
+
+.offline-card {
+	@extend .online-card--inner;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	border-radius : 2px;
+	transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .offline-card--status {
