--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -23,11 +23,11 @@
 	width : 15%;
 }
 
-.streams-gallery {
+/*.streams-gallery {
 	width : 90%;
 	margin : 0 auto 5%;	
 	color : #fff;
 	border  :none;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	background-color : #6441a5;
-}
+}*/
