--- a/src/styles/StreamsGallery/StreamsGallery.scss
+++ b/src/styles/StreamsGallery/StreamsGallery.scss
@@ -19,19 +19,70 @@
 
 .streams--stream__online {
 	@extend .streams--stream;
-	grid-template-columns : repeat(auto-fit, minmax(240px, 1fr));
-	padding-bottom : 1.5vh;
+	grid-template-columns : minmax(240px, 1fr);
+	/*grid-template-columns : repeat(auto-fit, minmax(240px, 1fr));
+	padding-bottom : 1.5vh;*/
 }
 
 
 .streams--stream__offline {
 	@extend .streams--stream;
+	grid-template-columns : minmax(150px, 1fr);
+	padding-top : 1.5vh;
 }
 
-@media (min-width : 768px) {
+@media (min-width : 360px) {
+	
+	.streams--stream__offline {
+		grid-template-columns : repeat(2, minmax(150px, 1fr));
+	}
+
+}
+
+@media (min-width : 680px) {
+
+	.streams--stream__online {
+		grid-template-columns : repeat(2, minmax(300px, 1fr));
+	}
+
+	.streams--stream__offline {
+		grid-template-columns : repeat(3, minmax(150px, 1fr));
+	}
+
+}
+
+@media (min-width : 1000px) {
+
+	.streams--stream__online {
+		grid-template-columns : repeat(3, minmax(300px, 1fr));
+	}
+
+	.streams--stream__offline {
+		grid-template-columns : repeat(4, minmax(150px, 1fr));
+	}
+
+}
+
+@media (min-width : 1450px) {
+
+	.streams--stream__online {
+		grid-template-columns : repeat(4, minmax(300px, 1fr));
+	}
+
+	.streams--stream__offline {
+		grid-template-columns : repeat(5, minmax(150px, 1fr));
+	}
+
+}
+
+@media (min-width : 1600px) {
 	
 	.streams--stream__online {
 		grid-template-columns : repeat(auto-fit, minmax(300px, 1fr));
+	}
+
+	.streams--stream__offline {
+		grid-template-columns : repeat(auto-fit, minmax(150px, 1fr));
 	}
 
 }
