--- a/src/styles/StreamCard.scss
+++ b/src/styles/StreamCard.scss
@@ -10,6 +10,16 @@
 	transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
+.online-card--outer__all {
+	grid-column : span 2;
+	grid-row : span 2;
+}
+
+.offline-card--outer__all {
+	grid-column : span 1;
+	grid-row : span 1;
+}
+
 .online-card--inner, .offline-card--inner {
 	display: flex;
 	flex-flow : column wrap;
@@ -68,4 +78,12 @@
 	height : 110px;
 	width: 110px;
 	border : black 1px solid;
+}
+
+@media (max-width : 360px) {
+
+	.offline-card--outer__all {
+		grid-column : span 2;
+	}
+
 }
