--- a/src/styles/StreamCard.scss
+++ b/src/styles/StreamCard.scss
@@ -1,61 +1,65 @@
 .online-card--outer, .offline-card--outer {
-	display : flex;
-	flex-flow : column wrap;
+	display         : flex;
+	flex-flow       : column wrap;
 	justify-content : center;
-	align-items : center;
-	height : 100%;
-	background-color : #fff;
-	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-	border-radius : 2px;
-	transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+	align-items     : center;
+	background-color: #fff;
+	box-shadow      : 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	border-radius   : 2px;
+	transition      : box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .online-card--outer__all {
-	grid-column : span 2;
-	grid-row : span 2;
+	grid-column: span 2;
+	grid-row   : span 2;
 }
 
 .offline-card--outer__all {
-	grid-column : span 1;
-	grid-row : span 1;
+	grid-column: span 1;
+	grid-row   : span 1;
 }
 
 .online-card--inner, .offline-card--inner {
-	display: flex;
-	flex-flow : column wrap;
-	text-align : center;
-	background-color : #fff;
-	color : black;
+	display         : flex;
+	flex-flow       : column wrap;	
+	text-align      : center;
+	background-color: #fff;
+	color           : black;
+}
+
+.online-card--inner__search, .offline-card--inner__search {
+	height : calc(100% - 32px);
+	justify-content : center;
 }
 
 .online-card--outer:hover, .offline-card--outer:hover {
-  	box-shadow: 0 5px 8px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  	box-shadow : 0 5px 8px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .online-card--close, .offline-card--close {
-	align-self : flex-end;
-	padding : 6px 10px;
+	align-self: flex-end;
+	padding   : 6px 10px;
 }
 
 .online-card--status {
-	display : inline;
+	display: inline;
 	margin : 0 auto -1.5vh;
 }
 
 .online-card--img-link {
-	display : inline-block;
-	width : 95%;
-	max-width : 320px;
-	height : 180px;
-	margin : 0 auto;
+	display  : inline-block;
+	width    : 95%;
+	max-width: 320px;
+	height   : 180px;
+	margin   : 0 auto;
 }
 
 .online-card--img {
-	display : inline-block;
-	width : 90%;
-	max-width : 320px;
-	height : 180px;
-	border : solid 1px black;
+	display  : inline-block;
+	width    : 90%;
+	max-width: 320px;
+	height   : 180px;
+	border   : solid 1px black;
 }
 
 .online-card--game-div, .status--link, .online-card--viewers {
@@ -67,16 +71,16 @@
 }
 
 .offline-card--logo-anchor {
-	display : inline;
-	width: 110px;
+	display: inline;
+	width  : 110px;
 	margin : 0 auto;	
 }
 
 .offline-card--logo {
-	display : inline;
+	display: inline;
 	margin : 1vh auto;
 	height : 110px;
-	width: 110px;
+	width  : 110px;
 	border : black 1px solid;
 }
 
