--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,7 +4,7 @@
 	padding         : 0;
 	height          : 100%;
 	background-color: #fff;
-	font-family     : /*'Roboto',*/ sans-serif;
+	font-family     : 'Roboto', sans-serif;
 	min-width       : 300px;
 }
 
