Very minor code formatting changes

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -14,11 +14,11 @@
 
 .app--title {
 	font-family: 'Press Start 2P', cursive;
-	font-size  : 35px;
+	font-size  : 30px;
 	margin     : 3vh auto;
 	color      : #6441a5;
 }
 
 .app--title__logo {
-	width : 15%;
+	width : 100px;
 }
