--- a/src/styles/StreamCard.scss
+++ b/src/styles/StreamCard.scss
@@ -25,6 +25,8 @@
 	text-align      : center;
 	background-color: #fff;
 	color           : black;
+	height          : 100%;
+	justify-content : space-evenly;
 }
 
 .online-card--inner__search, .offline-card--inner__search {
@@ -37,8 +39,17 @@
 }
 
 .online-card--close, .offline-card--close {
-	align-self: flex-end;
-	padding   : 6px 10px;
+	align-self      : flex-end;
+	padding         : 0;
+	font-size       : 40px;
+	background-color: #fff;
+	border          : none;
+	height          : 30px;
+	line-height     : 30px
+}
+
+.online-card--close:hover, .offline-card--close:hover {
+	color : #6441a5
 }
 
 .online-card--status {
