Added search button to searchBar

--- a/src/styles/Tabs.scss
+++ b/src/styles/Tabs.scss
@@ -2,7 +2,7 @@
 	height                 : calc(34.3px + (8.6 * (100vh - 300px) / 468));
 	width                  : 95%;
 	border                 :  none;
-	margin                 : 1vh auto 0;
+	margin                 : 0 auto;
 	box-shadow             : 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	border-top-left-radius : 25px;
 	border-top-right-radius: 25px;
