--- a/src/styles/StreamerSearch.scss
+++ b/src/styles/StreamerSearch.scss
@@ -1,24 +1,53 @@
 .streamer-search {
 	width           : 95%;
-	margin          : 1vh auto 1vh;
+	margin          : 0 auto;
 	border          : none;
 	background-color: #fff;
 }
 
-.streamer-search--search-bar {
+.streamer-search--search-bar-wrapper {
 	display   : block;
-	height    : 45px;
-	box-sizing: border-box;
 	width     : 100%;
-	padding   : 0 21px;
+	margin    : 1vh auto;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
 	transition: box-shadow 300ms ease-in-out;
 	border    : none;
-	font-size : 18px;
+	float     : left;
 }
 
-.streamer-search--search-bar:hover, .streamer-search--search-bar:focus {
+.streamer-search--search-bar {
+	height      : 45px;
+	box-sizing  : border-box;
+	width       : 80%;
+	padding     : 0 21px; 
+	border      : solid 2px #6441a5;
+	border-right: none;
+	font-size   : 18px;
+	float       : left;
+	transition  : all 300ms ease-in-out;
+}
+
+.streamer-search--search-bar:hover {
+	border-color : #956dd7;
+}
+
+.streamer-search--search-bar-wrapper:hover {
 	box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.08);
+}
+
+.streamer-search--search-button {
+	float           : left;
+	box-sizing      : border-box;
+	width           : 20%;
+	height          : 45px;
+	background-color: #6441a5;
+	color           : #eee;
+	border          : none;
+	transition      : all 300ms ease-in-out;
+}
+
+.streamer-search--search-button:hover {
+	background-color: #956dd7;
 }
 
 .streamer-search--search-results {
